--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
   <link rel="stylesheet" href="styles/style.css">
-  <script src="src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </head>
 <body>
   
