Display temp for user entered city
When user enters a city and clicks 'get weather!' button, display the
raw data temperature for that city.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <script type="module" src="src/main.js"></script>
 </head>
 <body>
-  
+  <div class="main">
+    <form action="">
+      <label for="city">
+        Enter City Name:
+        <input type="text" id="city" name="city">
+      </label>
+    </form>
+    <button type="submit" class="search-btn">Get Weather!</button>
+    <div class="weather-info"></div>
+  </div>
 </body>
 </html>
