Begin work on mobile design layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="main">
-    <form action="">
+    <form action="" id="weather-form">
       <label for="city">
         Enter City Name:
         <input type="text" id="city" name="city">
