Add basic instructions

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         Enter City Name:
         <input type="text" id="city" name="city">
       </label>
+      <p>*Please type city name only (ex: Paris, New York, London)</p>
     </form>
-    <button type="submit" class="search-btn">Get Weather!</button>
+    <button type="submit" class="search-btn">Get Temperature!</button>
     <div class="weather-info">
       <div class="lds-spinner hidden"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     </div>
